@@ -50,7 +50,11 @@
         "CLEAR_HISTORY": "Clear History",
         "CLEAR_HISTORY_MSG": "entry in console history has been cleared.",
         "CLEAR_HISTORY_MSG_PLURAL": "entries in console history have been cleared.",
-        "EXCUTE_QUERY": "Execute Query"
+        "EXCUTE_QUERY": "Execute Query",
+        "SHOW_ERROR_TRACE": "Show error trace",
+        "SHOW_ERROR_TRACE_HINT": "Select `Show error Trace` in the console Options to display the error trace.",
+        "ERROR": "Error!",
+        "RESULT_FROM_QUERY": "Result from query"
     },
     "TABLE": {
         "TITLE": "Tables",
