@@ -52,6 +52,7 @@
 
 @font-size-base:			18px;
 @font-size-small:			16px;
+@font-size-xsmall:			14px;
 
 @font-size-h1:				@font-size-xlarge;
 @font-size-h2:        @font-size-medium;
